k8/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-backend
  namespace: crypto-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto-backend
  template:
    metadata:
      labels:
        app: crypto-backend
    spec:
      containers:
        - name: backend
          image: fichofinki/crypto-backend:latest
          ports:
            - containerPort: 4000
