k8/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-frontend
  namespace: crypto-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto-frontend
  template:
    metadata:
      labels:
        app: crypto-frontend
    spec:
      containers:
        - name: frontend
          image: fichofinki/crypto-frontend:latest
          ports:
            - containerPort: 80
