k8/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-frontend-service
  namespace: crypto-namespace
  labels:
    app: crypto-frontend
spec:
  type: ClusterIP
  selector:
    app: crypto-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
