k8/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-backend-ingress
  namespace: crypto-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: crypto-namespace.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crypto-backend-service
                port:
                  number: 80
